style: set object-fit to contain for thumbnails and QR download page to prevent image cropping

--- a/print-layout.css
+++ b/print-layout.css
@@ -273,7 +273,7 @@ body {
 .pl-thumb img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 .pl-thumb-info {
   position: absolute;
